[package]
name = "twine-solana-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
bincode = "1.3"
borsh = { version = "1.5", features = ["derive"] }
bs58 = "0.5.1"
# bs58 = "0.4.0" // solana-program-v1.18 uses this version.
hex = { version = "0.4", features = ["serde"] }
log = "0.4"
parking_lot = "0.12"
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.61"

[target."cfg(not(target_pointer_width = \"64\"))".dependencies.parking_lot]
version = "0.12"
