[package]
name = "twine-solana-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
bincode = "1.3"
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
borsh0_10 = { package = "borsh", version = "0.10.3" }
borsh0_9 = { package = "borsh", version = "0.9.3" }
bs58 = "0.4.0"
hex = { version = "0.4", features = ["serde"] }
log = "0.4"
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"] }
parking_lot = "0.12"
rand = "0.8.5"
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.61"

[target."cfg(not(target_pointer_width = \"64\"))".dependencies.parking_lot]
version = "0.12"
